<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/popin"
        android:padding="16dp"
        android:text="@string/wallpaper_downloaded"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/favoriteAmination"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/set_success" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/popin"
        android:padding="16dp"
        android:text="@string/download_wallpaper_msg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Button
        android:id="@+id/btnDownloadDismiss"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popin"
        android:text="@string/dismiss" />

    <Button
        android:id="@+id/btnOpenPhoto"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popin"
        android:text="@string/open_photo" />

</LinearLayout>