<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="0.6"
            app:srcCompat="@drawable/ic_home_screen"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/popin"
            android:layout_marginLeft="16dp"
            android:text="@string/dailog_home"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnLock"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="0.6"
            app:srcCompat="@drawable/ic_screen_lock_"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/popin"
            android:layout_marginLeft="16dp"
            android:text="@string/lock_screen"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnBoth"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:alpha="0.6"
            app:srcCompat="@drawable/ic_screen_both"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/popin"
            android:layout_marginLeft="16dp"
            android:text="@string/both"/>
    </LinearLayout>

</LinearLayout>